--- a/templates/newItem.html
+++ b/templates/newItem.html
@@ -4,10 +4,10 @@
 
       <div class="newItem">
       <p> item name:
-      <br> <input type="text" name="name">
+      <br> <input type="text" name="name" required>
       </p>
       <p> item description:
-      <br> <textarea name="description" rows="8" cols="80"></textarea>
+      <br> <textarea name="description" rows="8" cols="80" required></textarea>
       </p>
 
       <select name="category">
